freest/test/prog/Invalid/Typing/TypeMismatchTuple/TypeMismatchTuple.fst
module TypeMismatchTuple where

f : Int -> Int
f (x, y) = 1
